@@ -76,13 +76,23 @@ class LogicTreeTestCase(CalculatorTestCase):
             aac(mr, er, atol=1e-6)
 
     def test_case_01(self):
-        # same source in two source models, use_rates
+        # same source in two source models
         self.assert_curves_ok(['curve-mean.csv'], case_01.__file__)
 
         # check event_based_mfd
         self.run_calc(case_01.__file__, 'rup.ini')
         [f] = export(('event_based_mfd', 'csv'), self.calc.datastore)
         self.assertEqualFiles('expected/mfd.csv', f, delta=1E-6)
+
+        # check that the occurrence rates are the expected ones
+        # NB: in engine < 3.17 this check fails
+        src, src = self.calc.csm.get_sources()
+        occrates = src.mfd.occurrence_rates
+        self.assertEqual(occrates, [1.6, 1.5, 1.4, 1.3, 1.2, 1.1, 1.0])
+        df = self.calc.datastore.read_df('ruptures', 'id')[
+            ['mag', 'occurrence_rate']]
+        gb = df.groupby('mag').sum()
+        aac(occrates, gb.occurrence_rate)
 
     def test_case_02(self):
         self.run_calc(case_02.__file__, 'job.ini')
